crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__integer.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (I 42)) of
  DataI payload#1 -> payload#1
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_2
    (force
      [[[[[[(force (builtin chooseData)) generated_2]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay [(lam payload_1 payload_1) [(builtin unIData) generated_2]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    (con data (I 42))])
--- optimized Core
case@Data (con data (I 42)) of
  DataI payload#2 -> payload#2
  _ -> trace "cold" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam builtin_4
      [(lam partial_5
        [(lam generated_3
          (force
            [[[[[[builtin_4 generated_3] (delay (force [partial_5 (delay (error))]))]
              (delay (force [partial_5 (delay (error))]))]
              (delay (force [partial_5 (delay (error))]))]
              (delay [(lam payload_1 payload_1) [(builtin unIData) generated_3]])]
              (delay (force [partial_5 (delay (error))]))]))
          (con data (I 42))])
        [builtin_2 (con string "cold")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (I 42)) of
  DataI payload#1 -> payload#1
  _ -> trace "cold" in error
--- isolated folded Core
let payload#1 : int = 42 in
payload#1
--- isolated cleaned Core
42
--- isolated UPLC before
(program 1.1.0
  [(lam generated_2
    (force
      [[[[[[(force (builtin chooseData)) generated_2]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay [(lam payload_1 payload_1) [(builtin unIData) generated_2]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    (con data (I 42))])
--- isolated UPLC after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
