crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__list.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (List [I 42])) of
  DataList payload#4 -> payload#4
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_5
    (force
      [[[[[[(force (builtin chooseData)) generated_5]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay [(lam payload_4 payload_4) [(builtin unListData) generated_5]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    (con data (List [I 42]))])
--- optimized Core
case@Data (con data (List [I 42])) of
  DataList payload#1 -> payload#1
  _ -> trace "cold" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam builtin_5
      [(lam partial_6
        [(lam generated_4
          (force
            [[[[[[builtin_5 generated_4] (delay (force [partial_6 (delay (error))]))]
              (delay (force [partial_6 (delay (error))]))]
              (delay [(lam payload_2 payload_2) [(builtin unListData) generated_4]])]
              (delay (force [partial_6 (delay (error))]))]
              (delay (force [partial_6 (delay (error))]))]))
          (con data (List [I 42]))])
        [builtin_3 (con string "cold")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (List [I 42])) of
  DataList payload#4 -> payload#4
  _ -> trace "cold" in error
--- isolated folded Core
let payload#4 : list Data = (con (list data) [(I 42)]) in
payload#4
--- isolated cleaned Core
(con (list data) [(I 42)])
--- isolated UPLC before
(program 1.1.0
  [(lam generated_5
    (force
      [[[[[[(force (builtin chooseData)) generated_5]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay [(lam payload_4 payload_4) [(builtin unListData) generated_5]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    (con data (List [I 42]))])
--- isolated UPLC after
(program 1.1.0 (con (list data) [(I 42)]))
--- result
(con (list data) [(I 42)])
--- logs
[]
